# souon-editor

./: .gitignore  bun.lockb  index.html  package.json  vite.config.ts
.github/workflows/: main.yml
src/: App.tsx  AudioSystem.tsx  Background.tsx  HeaderController.tsx  Moca.tsx  PythonEnv.tsx  SaveSystem.tsx  SequentialEditor.tsx  SplashScreen.tsx  eventBus.tsx  global.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsi
src-tauri/src/: audio_labeling.rs  export_meta.rs  language_model.rs  lib.rs  main.rs  python_env.rs  stem.rs
src/AudioSystem/: Stem.tsx
src/HeaderController/: FileMenu.tsx  PlusMenu.tsx  SettingsMenu.tsx  TitleBanner.tsx  TopOrBottom.tsx  ToyMenu.tsx  UpdateCheck.tsx
src/HeaderController/PlusMenu/: GenerateNewChart.tsx
src/HeaderController/ToyMenu/: RouletteWindow.tsx
src/SequentialEditor/: ChartTrack.tsx  MusicTrack.tsx  PlayingBarContainer.tsx  StemTrack.tsx  TempoTrack.tsx  Track.tsx  TrackHeader.tsx
src/SequentialEditor/ChartTrack/: ChartTrackBackground.tsx  ChartTrackMenu.tsx  ChartTrackPreview.tsx  EventsView.tsx  Note.tsx  ProposalSpeedChangeEvent.tsx
src/SequentialEditor/PlayingBarContainer/: PlayingBar.tsx
src/SequentialEditor/TempoTrack/: TempoMarker.tsx
src/components/: DraggableWindow.tsx
src/store/: chart.ts  chartEvent.ts  chartEventType.ts  lane.ts  noteEvent.ts  project.ts  speedChangeEvent.tsx  store.ts  tempoEvent.ts  temporalPosition.ts  userSettings.ts
src/utils/: bigintHelpers.ts  waveformRenderer.ts
(+4 files in other folders)
