[package]
name = "souon-editor"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "souon_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-shell = "2.2.0"
base64 = "0.22.1"
hound = "3.5.1"
vorbis-encoder = "0.1.4"
tauri-plugin-log = "2"
log = "0.4"
reqwest = "0.12"
tokio = { version = "1", features = ["full"] }
zip = "2.1"
aubio-rs = "0.2.0"
symphonia = "0.5.4"
llm = { version = "1.3.3", features = ["ollama", "google"] }

[profile.release]
panic = "abort"   # パニック時のスタックトレース情報を削除
codegen-units = 1 # 最適化の効率を向上
lto = true        # リンク時の最適化を有効化
opt-level = "z"   # サイズを最優先で最適化
strip = true      # デバッグシンボルを削除

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
